# ps-store-tracker

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo.py  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: fetch_and_store.py  generate_demo_data.py
src/ps_store_tracker/: analytics.py  app.py  config.py  fetch_email.py  parser.py  storage.py
